[package]
name = "keypair_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tiny-bip39 = "1.0.0"
ring = "0.16.20"
bs58 = { version = "0.5.0", features = ["check"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
num-bigint = "0.4.3"
rust-crypto = "0.2.36"
hex = "0.4.3"
tiny-keccak = { version = "1.4" }


anyhow = "1.0.71"
dotenv = "0.15.0"

serde = "1.0.163"
serde_json = "1.0.96"

tokio = "1.28.2"
web3 = "0.18.0"









